<resources>
    <string name="app_name">User Profile</string>
    <string name="titlescreen">User Profile Kotlin</string>

    <string name="btnimageadd">Open Picture Gallery</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="user_profile_kotlin">User Profile Kotlin</string>
    <string name="name">%1$s %2$s</string>
</resources>
